Added git image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Git Demo</title>
 </head>
 <body>
+    <h1><img src="https://miro.medium.com/v2/resize:fit:934/1*THIFVN_-7EppNHieVv62Rw.png" alt="git">Git Hub || Git</h1>
     <h1>Welcome to my Git demo repo</h1>
     <h1>New line</h1>
 </body>
